--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
             <plugin>
 
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
